--- a/bagofsnit/src/bagofsnit_frontend/public/.ic-assets.json5
+++ b/bagofsnit/src/bagofsnit_frontend/public/.ic-assets.json5
@@ -14,6 +14,14 @@
         // "disable_security_policy_warning": true,
 
         // Uncomment to redirect all requests from .raw.icp0.io to .icp0.io
-        // "allow_raw_access": false
-    },
+        // "allow_raw_access": false,
+
+        // Custom headers to allow local development with 127.0.0.1
+        "headers": {
+            // Add 127.0.0.1 for local replica access (localhost:* doesn't cover 127.0.0.1)
+            "Content-Security-Policy": "default-src 'self'; script-src 'self'; connect-src 'self' http://localhost:* http://127.0.0.1:* https://icp0.io https://*.icp0.io https://icp-api.io; img-src 'self' data:; style-src 'self' 'unsafe-inline'; font-src 'self'; frame-ancestors 'none'; form-action 'self'; base-uri 'self'; upgrade-insecure-requests;",
+            // Remove deprecated/unsupported Permissions-Policy features
+            "Permissions-Policy": "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()"
+        }
+    }
 ]
