--- a/.env
+++ b/.env
@@ -2,7 +2,10 @@
 # DFX CANISTER ENVIRONMENT VARIABLES
 DFX_VERSION='0.30.2'
 DFX_NETWORK='local'
+CANISTER_ID_INTERNET_IDENTITY='rdmx6-jaaaa-aaaaa-aaadq-cai'
+CANISTER_ID_BAGOFSNIT_FRONTEND='uxrrr-q7777-77774-qaaaq-cai'
 CANISTER_ID_SNIT='uzt4z-lp777-77774-qaabq-cai'
+CANISTER_ID_PRODSNIT='u6s2n-gx777-77774-qaaba-cai'
 CANISTER_ID='uzt4z-lp777-77774-qaabq-cai'
 CANISTER_CANDID_PATH='/mnt/c/Code/ICP/Snit/ICRC_Snit/.dfx/local/canisters/snit/snit.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
